# ic-siwe

./: .gitignore  Cargo.toml  Makefile  README.md  build.js  clean.sh  dfx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: npm-release.yml
.trash/: create_identity_message.rs  verify_identity_signature.rs  verify_principal.rs
src/: create_identity_message.rs  create_message.rs  create_siwe_message.rs  get_delegation.rs  index.tsx  init.rs  lib.rs  login.rs  prepare_login.rs  service.interface.ts  session.rs  siwe_message.rs  siwe_settings.rs  state.type.ts  verify_identity_signature.rs  verify_principal.rs  verify_siwe_signature.rs
src/types/: delegation.rs  mod.rs  settings.rs  signature_map.rs  siwe_message.rs
src/utils/: delegation.rs  ecdsa.rs  ed25519.rs  eth.rs  hash.rs  mod.rs  rand.rs  siwe.rs  time.rs
