[package]
name = "ic-siwe"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.66"
candid = "0.9.9"
hex = "0.4.3"
libsecp256k1 = "0.6.0"
easy-hasher = "2.2.1"
ic-cdk = "0.11.0"
ic-cdk-timers = "0.5.1"
url = "2.4.1"
regex = "1.5.4"
time = { version = "0.3.30", features = ["formatting"] }
rand_chacha = "0.3.1"
