[package]
name = "ic-siwe"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.66"
candid = "0.9.9"
hex = "0.4.3"
ic-cdk = "0.11.0"
ic-cdk-timers = "0.5.1"
url = "2.4.1"
time = { version = "0.3.30", features = ["formatting"] }
rand_chacha = "0.3.1"
siwe = "0.6.0"
getrandom = { version = "0.2.10", features = ["custom"] }

[dev-dependencies]
ethers = "2.0.10"
tokio = { version = "1.13.0", features = ["full"] }
rand = "0.8.4"
