[package]
name = "ic-siwe"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.66"
candid = "0.9.9"
hex = "0.4.3"
ic-cdk = "0.11.4"
ic-cdk-timers = "0.5.1"
url = "2.4.1"
time = { version = "0.3.30", features = ["formatting"] }
rand_chacha = "0.3.1"
getrandom = { version = "0.2.10", features = ["custom"] }
ed25519-dalek = { version = "2.1.0", features = ["default"] }
k256 = "0.13.2"
tiny-keccak = {version = "2.0.2", features = ["keccak"]}

[dev-dependencies]
ethers = "2.0.10"
tokio = { version = "1.13.0", features = ["full"] }
rand = "0.8.4"
